Fixed the problems with build.gradle